feat(number-generator) : support java 8